add nav for monbile js show/unshow

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
     <hr>
     <p class="footCopy">&copy2022 Forest Grup Company Ltd.</p>
 </footer>
+    <script src="dist/js/main.min.js"></script>
 </body>
 
 </html>
