aniamtion to nav added

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <nav>
     <div class="wrapper">
         <div class="navbar">
-            <div class="title">
+            <a class="title" href="#home">
                 <i class="fa-solid fa-tree title-logo"></i>
                 <p class="title-text">Forest</p>
-            </div>
+            </a>
             <div class="nav_items">
                 <a class="nav-link active" href="#home">Home</a>
                 <a class="nav-link " href="#aboutUs">O nas</a>
