scrolspy and contact done

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body>
+<body class="main-page">
     <button class="burger-btn">
     <div class="burger-btn__box">
         <div class="burger-btn__bars"> </div>
@@ -21,7 +21,7 @@
     <nav>
     <div class="wrapper">
         <div class="navbar">
-            <a class="title" href="#home">
+            <a class="title" href="./index.html">
                 <i class="fa-solid fa-tree title-logo"></i>
                 <p class="title-text">Forest</p>
             </a>
@@ -36,7 +36,7 @@
 
 </nav>
 
-    <header class="header" id="home">
+    <header class="header scrollspy" id="home">
         <div class="hero-img">
             <div class="hero-shadow"></div>
             <div class="hero-text wrapper">
@@ -47,7 +47,7 @@
     </header>
 
     <main>
-        <section class="wrapper" id="aboutUs">
+        <section class="wrapper scrollspy" id="aboutUs">
             <h2 class="section-title">o nas</h2>
             <div class="aboutUs">
                 <div class="aboutUs__img"></div>
@@ -64,7 +64,7 @@
             </div>
         </section>
 
-        <section id="advFamily" class="advFamily">
+        <section id="advFamily" class="advFamily ">
             <div class="hero-img">
                 <div class="hero-shadow"></div>
                 <div class="hero-text">
@@ -73,7 +73,7 @@
             </div>
         </section>
 
-        <section id="offer" class="offer">
+        <section id="offer" class="offer scrollspy">
             <h2 class="section-title">Oferta</h2>
             <p class="section-desc">Wybierz jedną z naszych wspaniałych ofert!</p>
             <div class="cards wrapper">
